# claude-code-mlflow-tracing

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json.example
method1_mlflow/: verify.py
method2_otel/: create_table.py  create_table.sql  verify.py
method3_otel_to_mlflow/: convert.py
scripts/: check_prereqs.sh
